fix: bug with Swiper defaultIndex and border-radius on iOS

--- a/src/components/swiper/swiper.less
+++ b/src/components/swiper/swiper.less
@@ -9,6 +9,7 @@
   position: relative;
   overflow: hidden;
   border-radius: var(--border-radius);
+  z-index: 0;
   &-track {
     width: 100%;
     overflow: hidden;
